[project]
name = "taraba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi>=0.115.12",
    "google-genai>=1.9.0",
    "mcp[cli]>=1.6.0",
    "pydantic-ai-slim[mcp]>=0.0.52",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.9",
    "uvicorn>=0.34.0",
]
